Bug 294643 - last line in file is not being highlighted
Summary: last line in file is not being highlighted
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: syntax (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-22 21:58 UTC by Sven Brauch
Modified: 2012-03-20 18:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A screenshot of the described bug. (6.43 KB, image/png)
2012-02-22 21:58 UTC, Sven Brauch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Brauch 2012-02-22 21:58:57 UTC
Created attachment 69020 [details]
A screenshot of the described bug.

Version:           unspecified (using KDE 4.8.0) 
OS:                Linux

The last line in any file is not being highlighted in the current verion of kate (the about dialog tells me "3.8.0", that version isn't in the list for some reason).
Attached is a screenshot which shows the buggy behaviour.

It is worth noting that the line has to be the very last line in the file, so if the file has a newline at the end, the bug is not visible. You also need to reload the file with F5 if it previously had an empty line in the end, and you removed that one without closing / reopening the document.

Reproducible: Always

Steps to Reproduce:
Open any file which kate has highlighting for and which has not a newline at its end.

Actual Results:  
The last line is not being highlighted.

Expected Results:  
The last line should be highlighted, duh.
Comment 1 Sven Brauch 2012-03-06 22:23:27 UTC
Git commit 61d36a0e3ed0fd25e4bd696096edcb2615a0dbb2 by Sven Brauch.
Committed on 06/03/2012 at 23:21.
Pushed by brauch into branch 'master'.

Fix the last line of a file from not being highlighted.

REVIEW:104178

M  +1    -1    part/document/katebuffer.cpp

http://commits.kde.org/kate/61d36a0e3ed0fd25e4bd696096edcb2615a0dbb2
Comment 2 Dominik Haumann 2012-03-20 18:34:17 UTC
Git commit c7fcb9f4382e7d968dd36c91083f3d0f21f5c1be by Dominik Haumann, on behalf of Sven Brauch.
Committed on 06/03/2012 at 23:21.
Pushed by dhaumann into branch 'KDE/4.8'.

Fix the last line of a file from not being highlighted.

REVIEW:104178

M  +1    -1    part/document/katebuffer.cpp

http://commits.kde.org/kate/c7fcb9f4382e7d968dd36c91083f3d0f21f5c1be