Fix the last line of a file from not being highlighted.

REVIEW:104178
BUG:294643